# SectorIntersectionApp

./: CMakeLists.txt  README.md  geometry.h  intersectioncalculator.cpp  intersectioncalculator.h  main.cpp  mainwindow.cpp  mainwindow.h  sector.cpp  sector.h  tst_mainfunctionality.cpp  visualizationwidget.cpp  visualizationwidget.h
